syntax = "proto3";

package checkpointpb;

import "commonpb/commonpb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/checkpointpb";

message Message {
  oneof type {
    Checkpoint checkpoint = 1;
  }
}

message Checkpoint {
  uint64 epoch        = 1;
  uint64 sn           = 2;
  bytes  snapshotHash = 3;
  bytes  signature    = 4;
}

message Event {
  oneof type {
    commonpb.EpochConfig epoch_config      = 1;
    StableCheckpoint     stable_checkpoint = 2;
  }
}

message StableCheckpoint {
  uint64                 sn       = 1;
  commonpb.StateSnapshot snapshot = 2;
  map<string, bytes>     cert     = 3;
}

message HashOrigin {}

message SignOrigin {}

message SigVerOrigin {}

message InstanceParams {
  repeated string     node_ids      = 1;
  uint64              epoch         = 2;
  uint64              seq_nr        = 3;
  uint64              resend_period = 4; // in milliseconds
}